2002-02-22  Tim Legant  <tim@catseye.net>

	* Util.py (build_dbm): New function, based on the list2dbm
	utility.

	* FilterParser.py (FilterParser): Added -autodbm option to
	'from-file' and 'to-file'.

	(FilterParser.__search_dbm): New function.

	(FilterParser.firstmatch): Modified 'from-/to-file' clause to
	support the -autodbm argument.  Modified 'from-/to-dbm' clause to
	use the new __search_dbm function.

2002-02-21  Tim Legant  <tim@catseye.net>

	* FilterParser.py (FilterParser): Modified 'in_action' and
	'action_option' regexps to handle new option on 'deliver' action.
	
	(FilterParser.__buildactions): Allowed incoming filter actions to
	have options.

2002-02-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: raise TMDA.Errors.ConfigError for tmdarc problems
	instead of using print; sys.exit(75).

	* Errors.py: Add ConfigError for tmdarc related errors.
	
2002-02-21  Tim Legant  <tim@catseye.net>

	* FilterParser.py (FilterParser.__readrule): Fixed bug.  Last rule
	was being ignored.

2002-02-20  Tim Legant  <tim@catseye.net>

	* FilterParser.py (FilterParser.__parse): Cleaned up the last of
	the error handling.  Removed self.__exception and added local
	variable 'exception'.

	(FilterParser.__adderror): Removed function.  No longer needed.

	(FilterParser.__readrule): Now throws EOFError on end-of-file.
	Caught in FilterParser.__parse.

2002-02-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.read): Partially restore old
	behavior: allow missing filter files, but not IOErrors.

	(FilterParser.firstmatch): Correct Python2.2isms.

2002-02-20  Tim Legant  <tim@catseye.net>

	* FilterParser.py (Error): Moved __repr__ and __str__ to
	descendent ParsingError.

	(ParsingError): Added __repr__ and __str__ functions.

	(MatchError): New exception class.  Descendent of Error.

	(FilterParser): Modified 'most_sources' and 'hdrbody_sources'